// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`steppedListCard > should hide the toggle button 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="uv_toi52u0 uv_toi52u1 uv_toi52u2d uv_toi52u31 uv_toi52u3v uv_toi52u5v"
      style="--uv_4k0ekn0: 100%;"
    >
      <div
        class="uv_toi52u0 uv_toi52ud uv_toi52u2j uv_toi52u31 uv_toi52u77"
      >
        <h1>
          Header
        </h1>
      </div>
      <div
        class="styles__l0ny240 uv_1p7tz3i1"
        data-disabled="false"
        data-is-active="false"
      >
        <div
          class="uv_x6hyh50"
          style="--uv_3mg8xe0: 1fr 3fr; --uv_3mg8xe1: 1fr 3fr; --uv_3mg8xe2: 1fr 3fr; --uv_3mg8xe3: 1fr 3fr; --uv_3mg8xe4: 1fr 3fr; --uv_3mg8xe5: 1fr 3fr;"
        >
          <div
            class="styles__l0ny241 uv_toi52u0 uv_toi52u1 uv_toi52u2d uv_toi52u31 uv_toi52u47 uv_toi52u5v"
          >
            <ul
              class="uv_1g1au380"
            >
              <li
                class="styles__l0ny246 uv_1g1au381 uv_1g1au382"
              >
                <div
                  class="uv_1jy42m00 uv_1jy42m03 uv_1jy42m0c uv_1jy42m0m"
                >
                  1
                </div>
                <div
                  class="uv_1g1au384 uv_1g1au386"
                >
                  <h3
                    class="styles__l0ny245 uv_m4c9ow0 uv_m4c9ow1 uv_m4c9ow3 uv_m4c9ow5 uv_m4c9ow7 uv_m4c9owk uv_m4c9owm uv_m4c9ows uv_m4c9ow3f"
                  >
                    step1
                  </h3>
                </div>
              </li>
              <li
                class="styles__l0ny246 uv_1g1au381 uv_1g1au382"
              >
                <div
                  class="uv_1jy42m00 uv_1jy42m02 uv_1jy42m0c uv_1jy42m0h"
                >
                  2
                </div>
                <div
                  class="uv_1g1au384 uv_1g1au386"
                >
                  <h3
                    class="styles__l0ny245 uv_m4c9ow0 uv_m4c9ow1 uv_m4c9ow3 uv_m4c9ow5 uv_m4c9ow7 uv_m4c9owk uv_m4c9owm uv_m4c9owo uv_m4c9ow3f"
                  >
                    step2
                  </h3>
                </div>
              </li>
            </ul>
          </div>
          <div
            class="styles__l0ny242 uv_toi52u0 uv_toi52u1 uv_toi52u2d uv_toi52u31 uv_toi52u5v"
          >
            <div
              class="styles__l0ny244"
            >
              <h3
                class="uv_m4c9ow0 uv_m4c9ow1 uv_m4c9ow3 uv_m4c9ow5 uv_m4c9ow7 uv_m4c9owk uv_m4c9owm uv_m4c9ow1b uv_m4c9ow3f"
              >
                First step
              </h3>
            </div>
            Description
            <div
              class="styles__l0ny243"
            >
              <img
                alt="blockStorage"
                src="https://assets.scaleway.com/illustrations/products/blockStorage/block-storage-wire.svg"
                width="200"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`steppedListCard > should work with custom hide action 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="uv_toi52u0 uv_toi52u1 uv_toi52u2d uv_toi52u31 uv_toi52u3v uv_toi52u5v"
      style="--uv_4k0ekn0: 100%;"
    >
      <div
        class="uv_toi52u0 uv_toi52ud uv_toi52u2j uv_toi52u31 uv_toi52u77"
      >
        <h3
          class="uv_m4c9ow0 uv_m4c9ow1 uv_m4c9ow3 uv_m4c9ow5 uv_m4c9ow7 uv_m4c9owk uv_m4c9owm uv_m4c9ow16 uv_m4c9ow3f"
        >
          Header
        </h3>
        <button
          class="styles__l0ny247 uv_e1wcoe0 uv_e1wcoe1 uv_e1wcoe3 uv_e1wcoe8 uv_e1wcoeg uv_e1wcoej uv_e1wcoe19"
          type="button"
        >
          Hide
        </button>
      </div>
      <div
        class="styles__l0ny240 uv_1p7tz3i1"
        data-disabled="false"
        data-is-active="false"
      >
        <div
          class="uv_x6hyh50"
          style="--uv_3mg8xe0: 1fr 3fr; --uv_3mg8xe1: 1fr 3fr; --uv_3mg8xe2: 1fr 3fr; --uv_3mg8xe3: 1fr 3fr; --uv_3mg8xe4: 1fr 3fr; --uv_3mg8xe5: 1fr 3fr;"
        >
          <div
            class="styles__l0ny241 uv_toi52u0 uv_toi52u1 uv_toi52u2d uv_toi52u31 uv_toi52u47 uv_toi52u5v"
          >
            <ul
              class="uv_1g1au380"
            >
              <li
                class="styles__l0ny246 uv_1g1au381 uv_1g1au382"
              >
                <div
                  class="uv_1jy42m00 uv_1jy42m03 uv_1jy42m0c uv_1jy42m0m"
                >
                  1
                </div>
                <div
                  class="uv_1g1au384 uv_1g1au386"
                >
                  <h3
                    class="styles__l0ny245 uv_m4c9ow0 uv_m4c9ow1 uv_m4c9ow3 uv_m4c9ow5 uv_m4c9ow7 uv_m4c9owk uv_m4c9owm uv_m4c9ows uv_m4c9ow3f"
                  >
                    step1
                  </h3>
                </div>
              </li>
              <li
                class="styles__l0ny246 uv_1g1au381 uv_1g1au382"
              >
                <div
                  class="uv_1jy42m00 uv_1jy42m02 uv_1jy42m0c uv_1jy42m0h"
                >
                  2
                </div>
                <div
                  class="uv_1g1au384 uv_1g1au386"
                >
                  <h3
                    class="styles__l0ny245 uv_m4c9ow0 uv_m4c9ow1 uv_m4c9ow3 uv_m4c9ow5 uv_m4c9ow7 uv_m4c9owk uv_m4c9owm uv_m4c9owo uv_m4c9ow3f"
                  >
                    step2
                  </h3>
                </div>
              </li>
            </ul>
          </div>
          <div
            class="styles__l0ny242 uv_toi52u0 uv_toi52u1 uv_toi52u2d uv_toi52u31 uv_toi52u5v"
          >
            <div
              class="styles__l0ny244"
            >
              <h1>
                First step
              </h1>
            </div>
            Description
            <div
              class="styles__l0ny243"
            >
              <img
                alt="blockStorage"
                src="https://assets.scaleway.com/illustrations/products/blockStorage/block-storage-wire.svg"
                width="200"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`steppedListCard > should work with default props 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="uv_toi52u0 uv_toi52u1 uv_toi52u2d uv_toi52u31 uv_toi52u3v uv_toi52u5v"
      style="--uv_4k0ekn0: 100%;"
    >
      <div
        class="uv_toi52u0 uv_toi52ud uv_toi52u2j uv_toi52u31 uv_toi52u77"
      >
        <h1>
          Header
        </h1>
        <div
          aria-controls="_r_0_"
          aria-describedby="_r_0_"
          class="uv_w40vpo9"
          tabindex="0"
        >
          <button
            class="styles__l0ny247 uv_e1wcoe0 uv_e1wcoe1 uv_e1wcoe3 uv_e1wcoe8 uv_e1wcoeg uv_e1wcoej uv_e1wcoe19"
            type="button"
          >
            hide button
          </button>
        </div>
      </div>
      <div
        class="styles__l0ny240 uv_1p7tz3i1"
        data-disabled="false"
        data-is-active="false"
      >
        <div
          class="uv_x6hyh50"
          style="--uv_3mg8xe0: 1fr 3fr; --uv_3mg8xe1: 1fr 3fr; --uv_3mg8xe2: 1fr 3fr; --uv_3mg8xe3: 1fr 3fr; --uv_3mg8xe4: 1fr 3fr; --uv_3mg8xe5: 1fr 3fr;"
        >
          <div
            class="styles__l0ny241 uv_toi52u0 uv_toi52u1 uv_toi52u2d uv_toi52u31 uv_toi52u47 uv_toi52u5v"
          >
            <ul
              class="uv_1g1au380"
            >
              <li
                class="styles__l0ny246 uv_1g1au381 uv_1g1au382"
              >
                <div
                  class="uv_1jy42m00 uv_1jy42m03 uv_1jy42m0c uv_1jy42m0m"
                >
                  1
                </div>
                <div
                  class="uv_1g1au384 uv_1g1au386"
                >
                  <h3
                    class="styles__l0ny245 uv_m4c9ow0 uv_m4c9ow1 uv_m4c9ow3 uv_m4c9ow5 uv_m4c9ow7 uv_m4c9owk uv_m4c9owm uv_m4c9ows uv_m4c9ow3f"
                  >
                    step1
                  </h3>
                </div>
              </li>
              <li
                class="styles__l0ny246 uv_1g1au381 uv_1g1au382"
              >
                <div
                  class="uv_1jy42m00 uv_1jy42m02 uv_1jy42m0c uv_1jy42m0h"
                >
                  2
                </div>
                <div
                  class="uv_1g1au384 uv_1g1au386"
                >
                  <h3
                    class="styles__l0ny245 uv_m4c9ow0 uv_m4c9ow1 uv_m4c9ow3 uv_m4c9ow5 uv_m4c9ow7 uv_m4c9owk uv_m4c9owm uv_m4c9owo uv_m4c9ow3f"
                  >
                    step2
                  </h3>
                </div>
              </li>
            </ul>
          </div>
          <div
            class="styles__l0ny242 uv_toi52u0 uv_toi52u1 uv_toi52u2d uv_toi52u31 uv_toi52u5v"
          >
            <div
              class="styles__l0ny244"
            >
              <h3
                class="uv_m4c9ow0 uv_m4c9ow1 uv_m4c9ow3 uv_m4c9ow5 uv_m4c9ow7 uv_m4c9owk uv_m4c9owm uv_m4c9ow1b uv_m4c9ow3f"
              >
                First step
              </h3>
            </div>
            Description
            <div
              class="styles__l0ny243"
            >
              <img
                alt="blockStorage"
                src="https://assets.scaleway.com/illustrations/products/blockStorage/block-storage-wire.svg"
                width="200"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`steppedListCard > should work with pre-completed step 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="uv_toi52u0 uv_toi52u1 uv_toi52u2d uv_toi52u31 uv_toi52u3v uv_toi52u5v"
      style="--uv_4k0ekn0: 100%;"
    >
      <div
        class="uv_toi52u0 uv_toi52ud uv_toi52u2j uv_toi52u31 uv_toi52u77"
      >
        <h1>
          Header
        </h1>
        <button
          class="styles__l0ny247 uv_e1wcoe0 uv_e1wcoe1 uv_e1wcoe3 uv_e1wcoe8 uv_e1wcoeg uv_e1wcoej uv_e1wcoe19"
          type="button"
        >
          Hide
        </button>
      </div>
      <div
        class="styles__l0ny240 uv_1p7tz3i1"
        data-disabled="false"
        data-is-active="false"
      >
        <div
          class="uv_x6hyh50"
          style="--uv_3mg8xe0: 1fr 3fr; --uv_3mg8xe1: 1fr 3fr; --uv_3mg8xe2: 1fr 3fr; --uv_3mg8xe3: 1fr 3fr; --uv_3mg8xe4: 1fr 3fr; --uv_3mg8xe5: 1fr 3fr;"
        >
          <div
            class="styles__l0ny241 uv_toi52u0 uv_toi52u1 uv_toi52u2d uv_toi52u31 uv_toi52u47 uv_toi52u5v"
          >
            <ul
              class="uv_1g1au380"
            >
              <li
                class="styles__l0ny246 uv_1g1au381 uv_1g1au382"
              >
                <div
                  class="uv_1jy42m00 uv_1jy42m03 uv_1jy42m0c uv_1jy42m0m"
                >
                  1
                </div>
                <div
                  class="uv_1g1au384 uv_1g1au386"
                >
                  <h3
                    class="styles__l0ny245 uv_m4c9ow0 uv_m4c9ow1 uv_m4c9ow3 uv_m4c9ow5 uv_m4c9ow7 uv_m4c9owk uv_m4c9owm uv_m4c9ows uv_m4c9ow3f"
                  >
                    step1
                  </h3>
                </div>
              </li>
              <li
                class="styles__l0ny246 uv_1g1au381 uv_1g1au382"
              >
                <div
                  class="uv_1jy42m00 uv_1jy42m02 uv_1jy42m0c uv_1jy42m0f"
                >
                  <svg
                    class="styles__dkdfcq0 styles_disabled_false__dkdfcq1 styles_prominence_default__dkdfcq3 styles_size_small__dkdfcqg styles_undefined_compound_39__dkdfcq1n"
                    viewBox="0 0 16 16"
                  >
                    <path
                      clip-rule="evenodd"
                      d="M12.166 3.126a.75.75 0 0 1 .208 1.04l-5 7.5a.75.75 0 0 1-1.154.114l-3-3a.75.75 0 0 1 1.06-1.06l2.353 2.353 4.493-6.739a.75.75 0 0 1 1.04-.208"
                    />
                  </svg>
                </div>
                <div
                  class="uv_1g1au384 uv_1g1au386"
                >
                  <h3
                    class="styles__l0ny245 uv_m4c9ow0 uv_m4c9ow1 uv_m4c9ow3 uv_m4c9ow5 uv_m4c9ow7 uv_m4c9owk uv_m4c9owm uv_m4c9owo uv_m4c9ow3f"
                  >
                    step2
                  </h3>
                </div>
              </li>
            </ul>
          </div>
          <div
            class="styles__l0ny242 uv_toi52u0 uv_toi52u1 uv_toi52u2d uv_toi52u31 uv_toi52u5v"
          >
            <div
              class="styles__l0ny244"
            >
              <h3
                class="uv_m4c9ow0 uv_m4c9ow1 uv_m4c9ow3 uv_m4c9ow5 uv_m4c9ow7 uv_m4c9owk uv_m4c9owm uv_m4c9ow1b uv_m4c9ow3f"
              >
                First step
              </h3>
            </div>
            Description
            <div
              class="styles__l0ny243"
            >
              <img
                alt="blockStorage"
                src="https://assets.scaleway.com/illustrations/products/blockStorage/block-storage-wire.svg"
                width="200"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`steppedListCard > should work with step icon 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="uv_toi52u0 uv_toi52u1 uv_toi52u2d uv_toi52u31 uv_toi52u3v uv_toi52u5v"
      style="--uv_4k0ekn0: 100%;"
    >
      <div
        class="uv_toi52u0 uv_toi52ud uv_toi52u2j uv_toi52u31 uv_toi52u77"
      >
        <h1>
          Header
        </h1>
      </div>
      <div
        class="styles__l0ny240 uv_1p7tz3i1"
        data-disabled="false"
        data-is-active="false"
      >
        <div
          class="uv_x6hyh50"
          style="--uv_3mg8xe0: 1fr 3fr; --uv_3mg8xe1: 1fr 3fr; --uv_3mg8xe2: 1fr 3fr; --uv_3mg8xe3: 1fr 3fr; --uv_3mg8xe4: 1fr 3fr; --uv_3mg8xe5: 1fr 3fr;"
        >
          <div
            class="styles__l0ny241 uv_toi52u0 uv_toi52u1 uv_toi52u2d uv_toi52u31 uv_toi52u47 uv_toi52u5v"
          >
            <ul
              class="uv_1g1au380"
            >
              <li
                class="styles__l0ny246 uv_1g1au381 uv_1g1au382"
              >
                <div
                  class="uv_1jy42m00 uv_1jy42m03 uv_1jy42m0c uv_1jy42m0m"
                >
                  <svg
                    class="styles__dkdfcq0 styles_disabled_false__dkdfcq1 styles_prominence_default__dkdfcq3 styles_size_small__dkdfcqg styles_undefined_compound_39__dkdfcq1n"
                    viewBox="0 0 16 16"
                  >
                    <path
                      clip-rule="evenodd"
                      d="M8 7.333a.67.67 0 0 1-.667-.666.669.669 0 0 1 1.247-.334c.187.32.593.427.913.24a.666.666 0 0 0 .24-.913A2.01 2.01 0 0 0 8 4.66c-1.107 0-2 .893-2 2s.893 2 2 2c.367 0 .667.3.667.667a.669.669 0 0 1-1.247.333.666.666 0 0 0-.913-.24.666.666 0 0 0-.24.914c.346.593.993 1 1.733 1 1.107 0 2-.894 2-2 0-1.107-.893-2-2-2M4.667 6c.366 0 .666-.3.666-.667 0-.366-.3-.666-.666-.666H2v6.666h2.667c.366 0 .666-.3.666-.666S5.033 10 4.667 10H3.333V8.667h1.334c.366 0 .666-.3.666-.667s-.3-.667-.666-.667H3.333V6zm8.473 3.68c.18-.32.587-.44.907-.26v.007c.32.18.44.586.26.906a1.94 1.94 0 0 1-1.694 1.007c-1.1 0-1.946-.92-1.946-2V6.673c0-1.08.846-2 1.946-2 .74 0 1.367.414 1.694 1.007.18.32.06.727-.26.907a.67.67 0 0 1-.907-.26.6.6 0 0 0-.527-.327C12.3 6 12 6.273 12 6.667v2.68c.007.393.3.66.613.66.214 0 .414-.12.527-.327"
                      fill-rule="evenodd"
                    />
                  </svg>
                </div>
                <div
                  class="uv_1g1au384 uv_1g1au386"
                >
                  <h3
                    class="styles__l0ny245 uv_m4c9ow0 uv_m4c9ow1 uv_m4c9ow3 uv_m4c9ow5 uv_m4c9ow7 uv_m4c9owk uv_m4c9owm uv_m4c9ows uv_m4c9ow3f"
                  >
                    step 1
                  </h3>
                </div>
              </li>
              <li
                class="styles__l0ny246 uv_1g1au381 uv_1g1au382"
              >
                <div
                  class="uv_1jy42m00 uv_1jy42m02 uv_1jy42m0c uv_1jy42m0h"
                >
                  2
                </div>
                <div
                  class="uv_1g1au384 uv_1g1au386"
                >
                  <h3
                    class="styles__l0ny245 uv_m4c9ow0 uv_m4c9ow1 uv_m4c9ow3 uv_m4c9ow5 uv_m4c9ow7 uv_m4c9owk uv_m4c9owm uv_m4c9owo uv_m4c9ow3f"
                  >
                    step2
                  </h3>
                </div>
              </li>
            </ul>
          </div>
          <div
            class="styles__l0ny242 uv_toi52u0 uv_toi52u1 uv_toi52u2d uv_toi52u31 uv_toi52u5v"
          >
            <div
              class="styles__l0ny244"
            >
              <h3
                class="uv_m4c9ow0 uv_m4c9ow1 uv_m4c9ow3 uv_m4c9ow5 uv_m4c9ow7 uv_m4c9owk uv_m4c9owm uv_m4c9ow1b uv_m4c9ow3f"
              >
                First step
              </h3>
            </div>
            Description
            <div
              class="styles__l0ny243"
            >
              <img
                alt="blockStorage"
                src="https://assets.scaleway.com/illustrations/products/blockStorage/block-storage-wire.svg"
                width="200"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
